--- a/index.html
+++ b/index.html
@@ -114,6 +114,53 @@ ICML 2024 paper submission deadline is over; all who submitted a paper deserve s
 <br>
 <br> 
 
+<h3>February 3, 2024</h3>
+
+<h1>ICML 2024 deadline</h1>
+
+ICML 2024 paper submission deadline is over; all who submitted a paper deserve some rest!
+
+<br>
+  
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+<h3>January 30, 2024</h3>
+
+<h1>Kaja Gruntkowska: New PhD Student!</h1>
+
+A new PhD student (in Statistics) arrived to join my team today: Kaja Gruntkowska (MS from Oxford). 
+
+<br>
+<br>
+Kaja interned in my lab in Summer 2022 as an undergraduate research student coming from Warwick. The internship was fruitful; Kaja, Alexander Tyurin and I coauthored a super nice paper: <a href="https://arxiv.org/abs/2209.15218">"EF21-P and friends: Improved theoretical communication complexity for distributed optimization with bidirectional compression"</a>, published in ICML 2023. You can listen to Kaja's University of Birmingham seminar talk on this topic on <a href="https://www.youtube.com/watch?v=CzBrLqV6Fxc">YouTube.</a> 
+
+<br>
+<br>
+Kaja then joined Oxford as an MS student in Fall 2022, and I supervised her thesis a part of which appeared in another super nice paper, <a href="https://arxiv.org/abs/2310.09804">"Communication compression for Byzantine robust learning: New efficient algorithms and improved rates"</a>, coauthored with Ahmad Rammal, Nikita Fedin, and Eduard Gorbunov, and recently accepted to AISTATS 2024. 
+
+<br>
+<br>
+Kaja and I thought it was a good idea for her to conduct a second (this time remote) internship, and this effort eventually turned into another beautiful paper: <a href="https://arxiv.org/abs/2402.04785">"Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity"</a>, coauthored with Alexander Tyurin. 
+
+<br>
+<br>
+  
+Kaja, welcome! A nice way to start your PhD with three papers in the pocket!
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
 
 <h3>December 13, 2023</h3>
 
