--- a/i_papers.html
+++ b/i_papers.html
@@ -69,7 +69,7 @@ Kai Yi, Nidham Gazagnadou, Peter Richtárik, and Lingjuan Lyu<br>
 [239] 
 Peter Richtárik, Elnur Gasanov, Konstantin Burlachenko<br>
 <b>Error feedback reloaded: From quadratic to arithmetic mean of smoothness constants</b><br>
-12th International Conference on Learning Representations (ICLR 2024) <br>
+<a href="https://openreview.net/forum?id=Ch7WqGcGmb">12th International Conference on Learning Representations (ICLR 2024)</a> <br>
 <span class="important">Federated Learning Paper</span><br>          
 [arXiv] [code: EF21-W, EF21] <br> <br>   
 
@@ -109,6 +109,7 @@ Massimo Fornasier, Peter Richtárik, Konstantin Riedl, and Lukang Sun<br>
 [233] 
 Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, Eduard Gorbunov, and Peter Richtárik<br>          
 <b>Communication compression for Byzantine robust learning: New efficient algorithms and improved rates</b><br>
+          26th International Conference on Artificial Intelligence and Statistics (AISTATS 2024) <br>
           <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2310.09804">arXiv</a>]    [code: Byz-VR-MARINA, Byz-DASHA-PAGE, Byz-EF21, Byz-EF21-BC]       
 <br> <br> 
@@ -133,7 +134,8 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 <br> <br> 
           
           [229] Rafał Szlendak, Elnur Gasanov, and Peter Richtárik<br>
-          <b>Understanding progressive training through the framework of randomized coordinate descent</b><br>          
+          <b>Understanding progressive training through the framework of randomized coordinate descent</b><br>     
+          26th International Conference on Artificial Intelligence and Statistics (AISTATS 2024) <br>               
           [<a href="https://arxiv.org/abs/2306.03626">arXiv</a>] [code: RPT] <br>
           <br> 
           
@@ -222,7 +224,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [215] Abdurakhmon Sadiev, Marina Danilova, Eduard Gorbunov, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov and Peter Richtárik<br>
           <b>High-probability bounds for stochastic optimization and variational inequalities: the case of unbounded variance</b><br>
-          40th International Conference on Machine Learning (ICML 2023)<br>
+          <a href="https://openreview.net/forum?id=JCpQcyjI7W">40th International Conference on Machine Learning (ICML 2023)</a><br>
           [<a href="https://arxiv.org/abs/2302.00999">arXiv</a>] [code: clipped-SGD, clipped-SSTM, R-clipped-SSTM] <br>
           <br>
 
@@ -280,7 +282,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [206] Kaja Gruntkowska, Alexander Tyurin and Peter Richtárik<br>
           <b>EF21-P and friends: Improved theoretical communication complexity for distributed optimization with bidirectional compression</b><br>
-          40th International Conference on Machine Learning (ICML 2023)<br>
+          <a href="https://proceedings.mlr.press/v202/gruntkowska23a">40th International Conference on Machine Learning (ICML 2023)</a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2209.15218">arXiv</a>] [code: EF21-P, EF21-P + DIANA, EF21-P + DCGD]<br>
           <br>
