AISTATS and ICLR

--- a/index.html
+++ b/index.html
@@ -162,6 +162,85 @@ Kaja, welcome! A nice way to start your PhD with three papers in the pocket!
 <br> 
 
 
+<h3>January 21, 2023</h3>
+<h1>Papers Accepted to AISTATS 2024</h1>
+
+<br>
+<img alt="AISTATS" src="imgs/AISTATS_logo.png" height="100">
+<br>
+<br>
+
+We've had two papers accepted to <a href="http://aistats.org/aistats2024/">27th International Conference on Artificial Intelligence and Statistics (AISTATS 2024)</a>:
+
+<br><br>
+
+Ahmad Rammal, Kaja Gruntkowska, Nikita Fedin, Eduard Gorbunov, and Peter Richtárik <br>
+<b>Communication Compression for Byzantine Robust Learning: New Efficient Algorithms and Improved Rates</b>  <br>
+<a href="https://arxiv.org/abs/2310.09804">[arXiv]</a> <br>
+<br>
+
+Rafał Szlendak, Elnur Gasanov, and Peter Richtárik<br>
+<b>Understanding Progressive Training Through the Framework of Randomized Coordinate Descent </b> <br>
+<a href="https://arxiv.org/abs/2306.03626">[arXiv]</a> <br>
+<br>
+
+<br>
+(*) Members of my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+
+<h3>January 16, 2024</h3>
+<h1>Papers Accepted to ICLR 2024</h1>
+
+
+<br>
+<img alt="ICLR" src="imgs/ICLR_logo.png" height="100">
+<br>
+
+<br>
+
+We've had a few papers accepted to  <a href="https://iclr.cc/Conferences/2024">12th International Conference on Learning Representations (ICLR 2024)</a>:
+
+
+<br><br>
+
+Kai Yi, Nidham Gazagnadou, Peter Richtárik, and Lingjuan Lyu<br>
+<b>FedP3: Personalized and Privacy-friendly Federated Network Pruning under Model Heterogeneity</b> <br>
+<a href="https://openreview.net/forum?id=hbHwZYqk9T">[OpenReview]</a> <br>
+<br>
+
+Peter Richtárik, Elnur Gasanov, and Konstantin Burlachenko<br>
+<b>Error Feedback Reloaded: From Quadratic to Arithmetic Mean of Smoothness Constants</b> <br>
+<a href="https://openreview.net/forum?id=Ch7WqGcGmb">[OpenReview]</a> <br>
+<br>
+
+Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
+<b>Det-CGD: Compressed Gradient Descent with Matrix Stepsizes for Non-Convex Optimization</b> <br>
+<a href="https://arxiv.org/abs/2305.12568">[arXiv]</a> <br>
+<br>
+
+
+<br>
+(*) Members of my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>December 13, 2023</h3>
 
 <h1>New Paper</h1>
