--- a/i_papers.html
+++ b/i_papers.html
@@ -51,7 +51,7 @@
 <h1> Prepared in 2024 </h1>
 
 [242] 
-Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
+Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 <b>Improving the worst-case bidirectional communication complexity for nonconvex distributed optimization under function similarity</b><br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2402.06412">arXiv</a>] [code: MARINA-P, M3] <br><br> 
