--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Kaja then joined Oxford as an MS student in Fall 2022, and I supervised her thes
 
 <br>
 <br>
-Kaja and I thought it was a good idea for her to conduct a second (this time remote) internship, and this effort eventually turned into another beautiful paper: <a href="https://arxiv.org/abs/2402.04785">"Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity"</a>, coauthored with Alexander Tyurin. 
+Kaja and I thought it was a good idea for her to conduct a second (this time remote) internship, and this effort eventually turned into another beautiful paper: <a href="https://arxiv.org/abs/2402.06412">"Improving the worst-case bidirectional communication complexity for nonconvex distributed optimization under function similarity"</a>, coauthored with Alexander Tyurin. 
 
 <br>
 <br>
