--- a/i_papers.html
+++ b/i_papers.html
@@ -50,17 +50,23 @@
 
 <h1> Prepared in 2024 </h1>
 
-[242] 
+[243] 
 Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 <b>Improving the worst-case bidirectional communication complexity for nonconvex distributed optimization under function similarity</b><br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2402.06412">arXiv</a>] [code: MARINA-P, M3] <br><br> 
 
-[241] 
+[242] 
 Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
 <b>Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity</b><br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [code: Shadowheart SGD] <br><br> 
+
+[241] 
+Andrei Panferov, Yury Demidovich, Ahmad Rammal, and Peter Richtárik<br>
+<b>Correlated quantization for faster nonconvex distributed optimization</b><br>
+<span class="important">Federated Learning Paper</span><br>          
+[<a href="https://arxiv.org/abs/2401.05518">arXiv</a>]  <br><br> 
 
 
 <h1> Prepared in 2023 </h1>
@@ -77,7 +83,7 @@ Peter Richtárik, Elnur Gasanov, Konstantin Burlachenko<br>
 <b>Error feedback reloaded: From quadratic to arithmetic mean of smoothness constants</b><br>
 <a href="https://openreview.net/forum?id=Ch7WqGcGmb">12th International Conference on Learning Representations (ICLR 2024)</a> <br>
 <span class="important">Federated Learning Paper</span><br>          
-[arXiv] [code: EF21-W, EF21] <br> <br>   
+[<a href="https://arxiv.org/abs/2402.10774">arXiv</a>] [code: EF21-W, EF21] <br> <br>   
 
 [238] 
 Jihao Xin, Ivan Ilin, Shunkang Zhang, Marco Canini, Peter Richtárik<br>          
