--- a/i_papers.html
+++ b/i_papers.html
@@ -170,8 +170,8 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           
           [225] Yury Demidovich, Grigory Malinovsky, Igor Sokolov and Peter Richtárik<br>
           <b>A guide through the zoo of biased SGD</b><br>
-          Advances in Neural Information Processing Systems 36 (NeurIPS 2023) <br>
-          [<a href="https://arxiv.org/abs/2305.16296">arXiv</a>] [code: BiasedSGD] <br>
+          <a href="https://openreview.net/forum?id=OCtv4NyahI">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>
+          [<a href="https://arxiv.org/abs/2305.16296">arXiv</a>] [code: BiasedSGD] [<a href="posters/Poster_Zoo_Biased_ABC.pdf">poster</a>] <br>
           <br>  
           
           [224] Peter Richtárik, Elnur Gasanov and Konstantin Burlachenko<br>
@@ -296,7 +296,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           <b>EF21-P and friends: Improved theoretical communication complexity for distributed optimization with bidirectional compression</b><br>
           <a href="https://proceedings.mlr.press/v202/gruntkowska23a">40th International Conference on Machine Learning (ICML 2023)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2209.15218">arXiv</a>] [code: EF21-P, EF21-P + DIANA, EF21-P + DCGD]<br>
+          [<a href="https://arxiv.org/abs/2209.15218">arXiv</a>] [code: EF21-P, EF21-P + DIANA, EF21-P + DCGD] [<a href="posters/Poster_EF21-P.pdf">poster</a>]<br>
           <br>
 
           [205] Soumia Boucherouite, Grigory Malinovsky, Peter Richtárik and El Houcine Bergou<br>
@@ -451,7 +451,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           <b>3PC: Three point compressors for communication-efficient distributed training and a better theory for lazy aggregation</b><br>
           <a href="https://proceedings.mlr.press/v162/richtarik22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/b6417f112bd27848533e54885b66c288_r5C1iLn.png">poster</a>] [code: 3PC, LAG, CLAG, EF21] <br>
+          [<a href="https://arxiv.org/abs/2202.00998">arXiv</a>] [<a href="posters/Poster_3PC.pdf">poster</a>] [code: 3PC, LAG, CLAG, EF21] <br>
           <br>
 
           [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi<br>
@@ -592,7 +592,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           <b>FedNL: Making Newton-type methods applicable to federated learning</b><br>
           <a href="https://proceedings.mlr.press/v162/safaryan22a.html">39th International Conference on Machine Learning (ICML 2022)</a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [<a href="https://icml.cc/media/PosterPDFs/ICML%202022/7385db9a3f11415bc0e9e2625fae3734.png">poster</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
+          [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [<a href="posters/Poster_FedNL.pdf">poster</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
           <br>
 
           [161] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
