--- a/i_papers.html
+++ b/i_papers.html
@@ -397,7 +397,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           [191] Lukang Sun, Avetik Karagulyan and Peter Richtárik<br>
           <b>Convergence of Stein variational gradient descent under a weaker smoothness condition</b><br>
           25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
-          [<a href="https://arxiv.org/abs/2206.00508">arXiv</a>] [code: SVGD] <br>
+          [<a href="https://arxiv.org/abs/2206.00508">arXiv</a>] [code: SVGD] [<a href="posters/Poster_SVGD_L0L1.pdf">poster</a>] <br>
           <br>
 
           [190] Alexander Tyurin and Peter Richtárik<br>
