--- a/i_talks.html
+++ b/i_talks.html
@@ -50,12 +50,25 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+<a href="https://icml.cc/Conferences/2024">ICML</a>, Vienna, Austria, July 21-27, 2024
+</p>
+
+<p>
 Federated Learning for Computer Vision (FedVision) Workshop at CVPR 2024, Seattle, USA, June 17-18, 2024 (keynote talk)
+</p>
+
+<p>
+<a href="https://aaforml.com">Applied Algorithms for Machine Learning. A workshop on the future of computation</a>, Paris, France, June 10-12, 2024 (plenary talk)
 </p>
 
 <p>
 One World Optimization Seminar in Vienna, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (invited)
 </p>
+
+<p>
+<a href="https://iclr.cc/Conferences/2024/Dates">ICLR</a>, Vienna, Austria, May 7-11, 2024
+</p>
+
 
 <p>
 <a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-13, 2024 (plenary talk)
