--- a/i_talks.html
+++ b/i_talks.html
@@ -69,26 +69,11 @@ One World Optimization Seminar in Vienna, Erwin Schrödinger International Insti
 <a href="https://iclr.cc/Conferences/2024/Dates">ICLR</a>, Vienna, Austria, May 7-11, 2024
 </p>
 
-
 <p>
-<a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-13, 2024 (plenary talk)
+<a href="https://virtual.aistats.org/Conferences/2024/Dates">AISTATS</a>, Valencia, Spain, May 2-4, 2024 
 </p>
 
-<p>
-CS Graduate Seminar, KAUST, Thuwal, Saudi Arabia, March 18, 2024 (invited)
-</p>
 
-<p>
-<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk - had to decline due to a conflict with another event)
-</p>
-
-<p>
-Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, California, February 29 -- March 1, 2024 (invited)
-</p>
-
-<p>
-Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KAUST, Saudi Arabia, February 25, 2024 (invited)
-</p>
 
 <!-- <p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
@@ -101,7 +86,31 @@ Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KA
 </p>
 !-->
 
+<!-- <p>
+<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk - had to decline due to a conflict with another event)
+</p>
+!-->
+
+
+<h1>2024 Talks</h1>
+
+<p>
+[236]
+<a href="https://sites.google.com/view/wnopta/home">Workshop on Nonsmooth Optimization and Applications (NOPTA 2024)</a>, in Honor of the 75th Birthday of Boris Mordukhovich, University of Antwerp, Belgium, April 8-12, 2024 (plenary talk)
+</p>
+
+
 <h1>2023 Talks</h1>
+
+<p>
+[235]
+Apple Workshop on Privacy Preserving Machine Learning 2024, Cupertino, California, February 29 -- March 1, 2024 (invited)
+</p>
+
+<p>
+[234]
+Three 50 min lectures on Optimization for Machine Learning, AMCS-STAT School, KAUST, Saudi Arabia, February 25, 2024 (invited)
+</p>
 
 <p>
 [233]
