--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         <div id="content">
 
 
+<h3>April 8, 2024</h3>
+
+<h1>NOPTA 2024</h1>
+
+Hi from Antwerp, Belgium. I am giving a plenary talk at NOPTA 2024 (Workshop on Nonsmooth Optimization and Applications), held during April 8-12, 2024 in honor of the 75th Birthday of Boris Mordukhovich. So far, loving the talks!
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
 
 <h3>February 12, 2024</h3>
 
