--- a/i_events.html
+++ b/i_events.html
@@ -52,6 +52,40 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+  <li><a href="https://icml.cc/Conferences/2024"><b>ICML 2024</b></a>, Vienna, Austria, July 21-27, 2024
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+  </li>
+  
+    <li><a href="  https://ismp2024.gerad.ca"><b>ISMP 2024</b></a>, Montreal, Canada, July 21-26, 2024
+  <ul>
+    <li> Co-organizer of the stream "1f: Random Methods for Continuous Optimization" (with Lin Xiao and Simon Lacoste-Julien) </li>
+  </ul>
+  </li>
+    
+    <li><a href="https://iclr.cc/Conferences/2024"><b>ICLR 2024</b></a>,  Vienna, Austria, May 7-11, 2024
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+  </li>
+
+
+  
+</ol>
+
+<h1> Past Events </h1>
+
+<ol reversed>
+
+  <li><a href="https://neurips.cc/Conferences/2023"><b>NeurIPS 2023</b></a>, New Orleans, USA, December 10-16, 2023
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+
   <li><a href="https://icml.cc/Conferences/2023"><b>ICML 2023</b></a>, Honolulu, Hawaii, July 23-29, 2023
 
   <ul>
@@ -59,15 +93,6 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
   </ul>
 
   </li>
-  
-
-</ol>
-
-
-
-<h1> Past Events </h1>
-
-<ol reversed>
 
   <li><a href="https://iclr.cc/Conferences/2023"><b>ICLR 2023</b></a>,  Kigali, Rwanda, May 1-5, 2023,
 
@@ -77,7 +102,6 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
   </li>
   
-
    <li><a href="https://cemse.kaust.edu.sa/ai/aii-symp-2023"><b>Rising Stars in AI Symposium</b></a>, KAUST, Thuwal, Saudi Arabia, February 19-21, 2023
 
   <ul>
