new papers on arXiv

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,22 @@
 
 <h1> Prepared in 2024 </h1>
 
+[246] 
+Kai Yi, Georg Meinhardt, Laurent Condat, and Peter Richtárik<br>
+<b>FedComLoc: Communication-efficient distributed training of sparse and quantized models</b><br>
+[<a href="https://arxiv.org/abs/2403.09904">arXiv</a>] [code: FedComLoc] <br><br> 
+
+[245] 
+Yury Demidovich, Grigory Malinovsky, and Peter Richtárik<br>
+<b>Streamlining in the Riemannian realm: Efficient Riemannian optimization with loopless variance reduction</b><br>
+[<a href="https://arxiv.org/abs/2403.06677">arXiv</a>] [code: R-LSVRG, R-PAGE, R-MARINA] <br><br> 
+
+[244] 
+Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
+<b>LoCoDL: Communication-efficient distributed learning with local training and compression</b><br>
+<span class="important">Federated Learning Paper</span><br>          
+[<a href="https://arxiv.org/abs/2403.04348">arXiv</a>] [code: LoCoDL] <br><br> 
+
 [243] 
 Kaja Gruntkowska, Alexander Tyurin, and Peter Richtárik<br>
 <b>Improving the worst-case bidirectional communication complexity for nonconvex distributed optimization under function similarity</b><br>
