--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,7 @@
 [246] 
 Kai Yi, Georg Meinhardt, Laurent Condat, and Peter Richtárik<br>
 <b>FedComLoc: Communication-efficient distributed training of sparse and quantized models</b><br>
+<span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2403.09904">arXiv</a>] [code: FedComLoc] <br><br> 
 
 [245] 
@@ -92,7 +93,7 @@ Kai Yi, Nidham Gazagnadou, Peter Richtárik, and Lingjuan Lyu<br>
 <b>FedP3: Personalized and privacy-friendly federated network pruning under model heterogeneity</b><br>
 <a href="https://openreview.net/forum?id=hbHwZYqk9T">12th International Conference on Learning Representations (ICLR 2024)</a> <br>
 <span class="important">Federated Learning Paper</span><br>          
-[arXiv] [code: FedP3] <br><br> 
+[<a href="https://arxiv.org/abs/2404.09816 ">arXiv</a>] [code: FedP3]  <br><br> 
           
 [239] 
 Peter Richtárik, Elnur Gasanov, Konstantin Burlachenko<br>
