--- a/i_papers.html
+++ b/i_papers.html
@@ -152,11 +152,13 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
     
 [231] Eduard Gorbunov, Abdurakhmon Sadiev, Marina Danilova, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov, and Peter Richtárik<br>          
           <b>High-probability convergence for composite and distributed stochastic minimization and variational inequalities with heavy-tailed noise</b> <br>
+ 	 41st International Conference on Machine Learning (ICML 2024)<br>          
           [<a href="https://arxiv.org/abs/2310.01860">arXiv</a>]    [code: DProx-clipped-SGD-shift, DProx-clipped-SSTM-shift]       
 <br> <br> 
           
           [230] Egor Shulgin and Peter Richtárik<br>          
           <b>Towards a better theoretical understanding of independent subnetwork training</b><br>
+ 	 41st International Conference on Machine Learning (ICML 2024)<br>
           <a href="https://fl-icml2023.github.io">Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities (ICML 2023 Workshop) </a> <br>
           <span class="important">Federated Learning Paper</span><br>            
           [<a href="https://arxiv.org/abs/2306.16484">arXiv</a>] [code: IST]           
