--- a/i_talks.html
+++ b/i_talks.html
@@ -50,6 +50,10 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+Tools for AI and Data Science (ALGOPT 2024), Louvain-la-Neuve, Belgium, August 27-30, 2024. The workshop is a celebration of Yurii Nesterov's 50 year long research career in optimization!
+</p>
+
+<p>
 <a href="https://icml.cc/Conferences/2024">ICML</a>, Vienna, Austria, July 21-27, 2024
 </p>
 
@@ -62,16 +66,10 @@ Federated Learning for Computer Vision (FedVision) Workshop at CVPR 2024, Seattl
 </p>
 
 <p>
-One World Optimization Seminar in Vienna, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (invited)
+<a href="https://www.esi.ac.at/events/e539/">One World Optimization Seminar in Vienna</a>, Erwin Schrödinger International Institute for Mathematics and Physics, Vienna, Austria, June 3-7, 2024 (invited)
 </p>
 
-<p>
-<a href="https://iclr.cc/Conferences/2024/Dates">ICLR</a>, Vienna, Austria, May 7-11, 2024
-</p>
 
-<p>
-<a href="https://virtual.aistats.org/Conferences/2024/Dates">AISTATS</a>, Valencia, Spain, May 2-4, 2024 
-</p>
 
 
 
@@ -93,6 +91,16 @@ One World Optimization Seminar in Vienna, Erwin Schrödinger International Insti
 
 
 <h1>2024 Talks</h1>
+
+<p>
+[238]
+<a href="https://iclr.cc/Conferences/2024/Dates">ICLR</a>, Vienna, Austria, May 7-11, 2024 (posters)
+</p>
+
+<p>
+[237]
+<a href="https://virtual.aistats.org/Conferences/2024/Dates">AISTATS</a>, Valencia, Spain, May 2-4, 2024 (posters)
+</p>
 
 <p>
 [236]
