--- a/i_papers.html
+++ b/i_papers.html
@@ -616,7 +616,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [161] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
           <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
-          39th Conference on Uncertainty in Artificial Intelligence (UAI 2023)<br> 
+          <a href="https://proceedings.mlr.press/v216/malinovsky23a">39th Conference on Uncertainty in Artificial Intelligence (UAI 2023)</a><br> 
           [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG, SO-SVRG, Cyclic-SVRG]<br>
           <br>
 
