--- a/i_papers.html
+++ b/i_papers.html
@@ -105,14 +105,14 @@ Peter Richtárik, Elnur Gasanov, Konstantin Burlachenko<br>
 [238] 
 Jihao Xin, Ivan Ilin, Shunkang Zhang, Marco Canini, Peter Richtárik<br>          
 <b>Kimad: Adaptive gradient compression with bandwidth awareness</b><br>
-<a href="https://dl.acm.org/doi/abs/10.1145/3630048.3630184">Proceedings of the 4th International Workshop on Distributed Machine Learning</a> <br>
+<a href="https://dl.acm.org/doi/abs/10.1145/3630048.3630184">Proceedings of the 4th International Workshop on Distributed Machine Learning, 25--48, 2023 (DistributedML 2023)</a> <br>
 <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2312.08053">arXiv</a>]    <br> <br> 
 
 [237] 
 Konstantin Burlachenko, Abdulmajeed Alrowithi, Fahad Ali Albalawi, and Peter Richtárik<br>          
 <b>Federated learning is better with non-homomorphic encryption</b><br>
-<a href="https://dl.acm.org/doi/10.1145/3630048.3630182">Proceedings of the 4th International Workshop on Distributed Machine Learning</a> <br>
+<a href="https://dl.acm.org/doi/10.1145/3630048.3630182">Proceedings of the 4th International Workshop on Distributed Machine Learning, 49--84, 2023 (DistributedML 2023)</a> <br>
 <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2312.02074">arXiv</a>]    <br> <br> 
 
@@ -482,6 +482,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [181] Grigory Malinovsky, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Server-side stepsizes and sampling without replacement provably help in federated optimization</b><br>
+          <a href="https://dl.acm.org/doi/10.1145/3630048.3630187">Proceedings of the 4th International Workshop on Distributed Machine Learning, 85--104, 2023 (DistributedML 2023) </a>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2201.11066">arXiv</a>] [code: Nastya] <br>
           <br>
@@ -498,7 +499,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [179] Haoyu Zhao, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>Faster rates for compressed federated learning with client-variance reduction</b><br>
-          To appear in: SIAM Journal on Mathematics of Data Science<br>          
+          <a href="https://epubs.siam.org/doi/10.1137/23M1553820">SIAM Journal on Mathematics of Data Science 6 (1):154-175, 2024</a><br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2112.13097">arXiv</a>] [code: COFIG, FRECON] <br>
           <br>
