--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,23 @@
 
 <h1> Prepared in 2024 </h1>
 
+
+[249] 
+Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Burlachenko, Kai Yi, Dan Alistarh, and Peter Richtárik<br>
+<b>PV-Tuning: Beyond straight-through estimation for extreme LLM compression</b><br>
+[<a href="https://arxiv.org/abs/2405.14852">arXiv</a>] [code: PV] <br><br> 
+
+[248] 
+Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
+<b>Stochastic proximal point methods for monotone inclusions under expected similarity</b><br>
+[<a href="https://arxiv.org/abs/2405.14255">arXiv</a>] [code: SPPM, SPPM-OC, L-SVRP] <br><br> 
+
+[247] 
+Hanmin Li, Kirill Acharya, and Peter Richtárik<br>
+<b>The power of extrapolation in federated learning</b><br>
+[<a href="https://arxiv.org/abs/2405.13766">arXiv</a>] [code: FedExProx, FedExProx-GraDS, FedExProx-StoPS] <br><br> 
+
+
 [246] 
 Kai Yi, Georg Meinhardt, Laurent Condat, and Peter Richtárik<br>
 <b>FedComLoc: Communication-efficient distributed training of sparse and quantized models</b><br>
