links to NeurIPS 2023

--- a/i_papers.html
+++ b/i_papers.html
@@ -54,6 +54,7 @@
 [249] 
 Vladimir Malinovskii, Denis Mazur, Ivan Ilin, Denis Kuznedelev, Konstantin Burlachenko, Kai Yi, Dan Alistarh, and Peter Richtárik<br>
 <b>PV-Tuning: Beyond straight-through estimation for extreme LLM compression</b><br>
+<span class="important">LLM Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.14852">arXiv</a>] [code: PV] <br><br> 
 
 [248] 
@@ -64,6 +65,7 @@ Abdurakhmon Sadiev, Laurent Condat, and Peter Richtárik<br>
 [247] 
 Hanmin Li, Kirill Acharya, and Peter Richtárik<br>
 <b>The power of extrapolation in federated learning</b><br>
+<span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2405.13766">arXiv</a>] [code: FedExProx, FedExProx-GraDS, FedExProx-StoPS] <br><br> 
 
 [246] 
@@ -217,7 +219,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
           
           [223] Ilyas Fatkhullin, Alexander Tyurin and Peter Richtárik<br>
           <b>Momentum provably improves error feedback!</b><br>
-          Advances in Neural Information Processing Systems 36 (NeurIPS 2023) <br>          
+          <a href="https://openreview.net/forum?id=w6LO3kqy9B#all">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>          
           <a href="https://fl-icml2023.github.io">Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities (ICML 2023 Workshop) </a> <br>          
           <span class="important">Federated Learning Paper</span><br>            
           [<a href="https://arxiv.org/abs/2305.15155">arXiv</a>] [code: EF21-SGDM-ideal, EF21-SGDM, EF21-SGD2M] [<a href="posters/Poster-EF21-SGDM.pdf">poster</a>] <br>
@@ -231,13 +233,13 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
                    
           [221] Alexander Tyurin and Peter Richtárik<br>
           <b>Optimal time complexities of parallel stochastic optimization methods under a fixed computation model</b><br>
-          Advances in Neural Information Processing Systems 36 (NeurIPS 2023) <br>
+          <a href="https://openreview.net/forum?id=B4xF1wfQnF">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>
           [<a href="https://arxiv.org/abs/2305.12387">arXiv</a>] [code: Rennala SGD, Malenia SGD] <br>
           <br>            
 
           [220] Alexander Tyurin and Peter Richtárik<br>
           <b>2Direction: Theoretically faster distributed training with bidirectional communication compression</b><br>
-          Advances in Neural Information Processing Systems 36 (NeurIPS 2023) <br>          
+          <a href="https://openreview.net/forum?id=n18MhTsSGb">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>          
           <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2305.12379">arXiv</a>] [code: 2Direction] <br>
           <br>   
@@ -437,7 +439,7 @@ Hanmin Li, Avetik Karagulyan, and Peter Richtárik<br>
 
           [190] Alexander Tyurin and Peter Richtárik<br>
           <b>A computation and communication efficient method for distributed nonconvex problems in the partial participation setting</b><br>
-          Advances in Neural Information Processing Systems 36 (NeurIPS 2023) <br>          
+          <a href="https://openreview.net/forum?id=loxinzXlCx">Advances in Neural Information Processing Systems 36 (NeurIPS 2023)</a> <br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2205.15580">arXiv</a>] [code: DASHA-PP, DASHA-PP-PAGE, DASHA-PP-FINITE-MVR, DASHA-PP-MVR] <br>
           <br>
